# my-ostis-system

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
problem-solver/: CMakeLists.txt
problem-solver/set-agents-module/: CMakeLists.txt  sc_set_module.cpp  sc_set_module.hpp
problem-solver/set-agents-module/agent/: sc_agent_calculate_set_power.cpp  sc_agent_calculate_set_power.hpp
problem-solver/set-agents-module/keynodes/: sc_set_keynodes.hpp
problem-solver/set-agents-module/tests/: test_sc_agent_calculate_set_power.cpp
